need pixel size

--- a/style.css
+++ b/style.css
@@ -21,11 +21,12 @@ body {
 }
 
 .canvas {
-    background-color: #00a8ff;
-    width: 500px;
-    height: 500px;
+    /* background-color: #00a8ff; */
+    /* width: auto;
+    height: auto; */
     border-radius: 20px;
     box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
+
 }
 
 
