need total value & state save

--- a/style.css
+++ b/style.css
@@ -20,10 +20,10 @@ body {
 
 }
 
-.canvas {
+canvas {
     /* background-color: #00a8ff; */
-    /* width: auto;
-    height: auto; */
+    width: 800px;
+    height: 800px;
     border-radius: 20px;
     box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
 
