need total value.... and add css

--- a/style.css
+++ b/style.css
@@ -2,23 +2,21 @@
     font-family: 'Press Start 2P';
     align-items: center;
     align-content: center;
+    margin-top: 10px;
+    margin-right: 10px;
 }
 
 body {
     background-color: aliceblue;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     padding: 50px 0px;
-    /* align-items: center; */
+    align-items: center;
+    justify-content: center;
     color: #f5f6fa;
 }
 
-.range {
-    margin-top: 50px;
-    color:skyblue;
-    text-align-last: center;
 
-}
 
 canvas {
     /* background-color: #00a8ff; */
@@ -26,49 +24,23 @@ canvas {
     height: 800px;
     border-radius: 20px;
     box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
+}
 
+.range {
+    color: skyblue;
+    text-align: left;
 }
 
 
-.controls .btns button {
-    justify-content: center;
-    text-align-last: center;
-    text-transform: none;
-    margin-top: 50px;
-    border-radius: 20px;
-    box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
-    color: rgba(0, 0, 0, 0.8);
-    background-color: white;
-    border: 2px solid rgba(0,0,0,0.05);
-    font-size: 12px;
-    font-weight: 600;
-    align-items: center;
+.btns .btn_open{
+    color:skyblue;
+    /* text-align-last: center; */
+    margin-left: 60px;
 }
-.controls .btns .openbtn {
-    justify-content: center;
-    text-align-last: center;
-    text-transform: none;
-    margin-top: 50px;
-    border-radius: 20px;
-    box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
-    color: rgba(0, 0, 0, 0.8);
-    background-color: white;
-    border: 2px solid rgba(0,0,0,0.05);
-    font-size: 12px;
-    font-weight: 600;
-    align-items: center;
-}
-.controls .btns .openbtn button {
-    justify-content: center;
-    text-align-last: center;
-    text-transform: none;
-    margin-top: 50px;
-    border-radius: 20px;
-    box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
-    color: rgba(0, 0, 0, 0.8);
-    background-color: white;
-    border: 2px solid rgba(0,0,0,0.05);
-    font-size: 12px;
-    font-weight: 600;
-    align-items: center;
+.btns button{
+    margin-left: 60px;
+    background: transparent;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(50, 50, 93, 0.01), 0 1px 3px rgba(0, 0, 0, 0.01);
+    color: steelblue;
 }
